# sweet-suite

./: .gitignore  CLAUDE.md  COMPARISON.md  Cargo.toml  DECISIONS.md  README.md  ROADMAP.md
apps/audio/: Cargo.toml
apps/audio/src/: main.rs
apps/video/: Cargo.toml
apps/video/src/: main.rs
apps/visual/: Cargo.toml
apps/visual/src/: main.rs  persistence.rs  shell.rs  tools.rs
assets/: AppIcon.icns
design-tokens/: README.md  tokens.toml
docs/: 01-unified-canvas-architecture.md  02-suite-platform-architecture.md  03-engine-internals-deep-dive.md
docs/reference/: scenepilot-compositor-reality-check.md
platform/assets/: Cargo.toml
platform/assets/src/: lib.rs
platform/design/: Cargo.toml
platform/design/src/: lib.rs
platform/doc/: Cargo.toml
platform/doc/src/: halfedge.rs  lib.rs
platform/gpu/: Cargo.toml
platform/gpu/src/: compositor.rs  font.rs  lib.rs  raster.rs  shaders.rs  tile_canvas.rs
platform/input/: Cargo.toml
platform/input/src/: lib.rs
platform/nodes/: Cargo.toml
platform/nodes/src/: lib.rs
platform/services/: Cargo.toml
platform/services/src/: lib.rs
platform/timeline/: Cargo.toml
platform/timeline/src/: lib.rs
platform/ui/: Cargo.toml
platform/ui/src/: lib.rs
scripts/: make_icon.py  package_macos.sh
