[package]
name = "suite-video"
version.workspace = true
edition.workspace = true
description = "The Video app (NLE). Converges from the existing COMPOSITOR product."

[dependencies]
suite-gpu = { path = "../../platform/gpu" }
suite-ui = { path = "../../platform/ui" }
suite-design = { path = "../../platform/design" }
suite-input = { path = "../../platform/input" }
suite-doc = { path = "../../platform/doc" }
suite-timeline = { path = "../../platform/timeline" }
suite-nodes = { path = "../../platform/nodes" }
suite-assets = { path = "../../platform/assets" }
suite-services = { path = "../../platform/services" }
